test/Fail/non-theorems/Issue1/Functions/24-bar.fof
%-----------------------------------------------------------------------------
% This file was automatically generated by Apia.
%-----------------------------------------------------------------------------

%-----------------------------------------------------------------------------
% The general axiom(s).

% The Agda term was:
% Name: Issue1.Functions.foo
% Role: axiom
% Line: 20
fof(n12_10705385424922057956, axiom, ( ! [A] : kp1_(cNAME_6_10705385424922057956,A) )).

% End general axiom(s).

%-----------------------------------------------------------------------------
% The conjecture.

% The Agda term was:
% Name: Issue1.Functions.bar
% Role: prove
% Line: 24
fof(n16_10705385424922057956, conjecture, ( ! [A] : kp1_(nAME_8_10705385424922057956,A) )).

% End conjecture.

%-----------------------------------------------------------------------------
% End TPTP file.
